Add code to generate CSV of blocked Wikipedia pages

--- a/non_sensitive/wikipedia-content-moderation/search_index.ipynb
+++ b/non_sensitive/wikipedia-content-moderation/search_index.ipynb
@@ -27,13 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "id": "1952ebdf-a53e-4e1d-ac1b-d245bd16ed01",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import json\n",
+    "import gzip\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -61,13 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "f341efe5-0e6b-49eb-aeb5-78845b7f49dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BLOCKED_CATS_CSV = Path(\"category_data\") / \"blocklist_cats.csv\"\n",
-    "BLOCKED_PAGES_INDEX = SEARCH_INDEX_DIR / \"blocked_cirrussearch.json.gz\""
+    "BLOCKED_CATS_CSV = Path(\"category_data\") / \"blocklist_cats_new.csv\"\n",
+    "BLOCKED_PAGES_INDEX = SEARCH_INDEX_DIR / \"blocked_cirrussearch.json.gz\"\n",
+    "BLOCKLIST_CSV = SEARCH_INDEX_DIR / \"dynamic_wikipedia_blocklist.csv\""
    ]
   },
   {
@@ -363,6 +365,390 @@
    ],
    "source": [
     "print(f\"Size of blocked page subset: {BLOCKED_PAGES_INDEX.stat().st_size / (1024*1024):.1f} MB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58e9903d-d234-42c5-b993-becd92a5351f",
+   "metadata": {},
+   "source": [
+    "## Create CSV summary of the blocklist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b707055-7856-4044-a97e-97a77d331f5a",
+   "metadata": {},
+   "source": [
+    "The index of blocked pages created above is still in ElasticSearch dump format. Here we convert to a CSV summary listing title, opening text, page ID and categories for each page on the blocklist."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bb7e654c-331c-472e-977a-afd178496f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_blocklist(bl_file):\n",
+    "    fields = [\"title\", \"opening_text\", \"category\", \"page_id\"]\n",
+    "    bl = []\n",
+    "    fail = []\n",
+    "\n",
+    "    with gzip.open(bl_file, \"rt\") as f:\n",
+    "        for i, line in enumerate(f):\n",
+    "            try:\n",
+    "                j = json.loads(line)\n",
+    "                bl.append({k: j.get(k) for k in fields})\n",
+    "            except Exception:\n",
+    "                fail.append(line)\n",
+    "\n",
+    "    return pd.DataFrame(bl), fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c3544d42-acf2-4635-8c56-9fe742339478",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.21 s, sys: 248 ms, total: 6.46 s\n",
+      "Wall time: 6.64 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "df_bl, fail = load_blocklist(BLOCKED_PAGES_INDEX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "205d703f-33b8-43af-aa26-2efe47a90c82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fj = [json.loads(x) for x in fail]\n",
+    "fj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "04ac32f7-aa8a-41ad-a923-6c377cfec208",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>opening_text</th>\n",
+       "      <th>category</th>\n",
+       "      <th>page_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20033</th>\n",
+       "      <td>Pizzagate conspiracy theory</td>\n",
+       "      <td>\"Pizzagate\" is a conspiracy theory that went v...</td>\n",
+       "      <td>[Webarchive template wayback links, Articles w...</td>\n",
+       "      <td>52376302</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             title   \n",
+       "20033  Pizzagate conspiracy theory  \\\n",
+       "\n",
+       "                                            opening_text   \n",
+       "20033  \"Pizzagate\" is a conspiracy theory that went v...  \\\n",
+       "\n",
+       "                                                category   page_id  \n",
+       "20033  [Webarchive template wayback links, Articles w...  52376302  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bl[df_bl[\"title\"].str.contains(\"pizzagate\", case=False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "14c61270-8d13-4975-8e90-ad4904b444e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cats = pd.read_csv(BLOCKED_CATS_CSV)\n",
+    "df_cats = df_cats.set_index(\"name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d43b0d51-e093-4d7a-a6c1-44f157ccb1c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_bl_cats(categories, df_cats):\n",
+    "    \"\"\"Get subset of categories which are in the blocklist.\"\"\"\n",
+    "    bl_cats = df_cats.index.intersection(categories)\n",
+    "    return df_cats.loc[bl_cats].index.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "07c21ddc-4d37-42e8-9c1d-7ee08d7e6201",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bl[\"blocked_category\"] = df_bl[\"category\"].map(lambda c: get_bl_cats(c, df_cats))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a7d1c33b-801f-450f-9301-93bd2f835a3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>opening_text</th>\n",
+       "      <th>category</th>\n",
+       "      <th>page_id</th>\n",
+       "      <th>blocked_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Custodio de señoras</td>\n",
+       "      <td>Custodio de señoras (transl. Custodian of ladi...</td>\n",
+       "      <td>[Articles with short description, Short descri...</td>\n",
+       "      <td>10000174</td>\n",
+       "      <td>[Erotic comedy film stubs]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Angel Face (1998 film)</td>\n",
+       "      <td>Angel Face (Spanish: La cara del ángel) is a 1...</td>\n",
+       "      <td>[IMDb ID same as Wikidata, Webarchive template...</td>\n",
+       "      <td>10003264</td>\n",
+       "      <td>[Dirty War films]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Vasily Rozanov</td>\n",
+       "      <td>Vasily Vasilievich Rozanov (Russian: Васи́лий ...</td>\n",
+       "      <td>[Articles with short description, Short descri...</td>\n",
+       "      <td>1000334</td>\n",
+       "      <td>[Deaths by starvation]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Phallic stage</td>\n",
+       "      <td>In Freudian psychoanalysis, the phallic stage ...</td>\n",
+       "      <td>[Articles with short description, Short descri...</td>\n",
+       "      <td>1000429</td>\n",
+       "      <td>[Child sexuality]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Neaira (hetaera)</td>\n",
+       "      <td>Neaira (/niˈaɪrə/; Greek: Νέαιρα), also Neaera...</td>\n",
+       "      <td>[Articles with short description, Short descri...</td>\n",
+       "      <td>10006179</td>\n",
+       "      <td>[Hetairai]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29596</th>\n",
+       "      <td>Juegos de verano</td>\n",
+       "      <td>Juegos de verano (Summer Games) is a 1973 Arge...</td>\n",
+       "      <td>[CS1 Spanish-language sources (es), Articles w...</td>\n",
+       "      <td>9997901</td>\n",
+       "      <td>[Argentine erotic films, 1970s erotic films]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29597</th>\n",
+       "      <td>La Mary</td>\n",
+       "      <td>La Mary is a 1974 Argentine romantic-drama fil...</td>\n",
+       "      <td>[CS1 Spanish-language sources (es), Use dmy da...</td>\n",
+       "      <td>9998022</td>\n",
+       "      <td>[Argentine erotic drama films]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29598</th>\n",
+       "      <td>Intimacies of a Prostitute</td>\n",
+       "      <td>Intimacies of a Prostitute (Spanish: Intimidad...</td>\n",
+       "      <td>[CS1 Spanish-language sources (es), Articles w...</td>\n",
+       "      <td>9998051</td>\n",
+       "      <td>[Sexploitation films, Films about prostitution...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29599</th>\n",
+       "      <td>Beautiful Agony</td>\n",
+       "      <td>Beautiful Agony is a paid-subscription erotic ...</td>\n",
+       "      <td>[Australian erotica and pornography websites, ...</td>\n",
+       "      <td>9998582</td>\n",
+       "      <td>[Australian erotica and pornography websites]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29600</th>\n",
+       "      <td>La venus maldita</td>\n",
+       "      <td>La venus maldita (The Damned Venus) is a 1967 ...</td>\n",
+       "      <td>[CS1 Spanish-language sources (es), CS1 Europe...</td>\n",
+       "      <td>9999236</td>\n",
+       "      <td>[Erotic film stubs, Argentine erotic drama fil...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>29601 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            title   \n",
+       "0             Custodio de señoras  \\\n",
+       "1          Angel Face (1998 film)   \n",
+       "2                  Vasily Rozanov   \n",
+       "3                   Phallic stage   \n",
+       "4                Neaira (hetaera)   \n",
+       "...                           ...   \n",
+       "29596            Juegos de verano   \n",
+       "29597                     La Mary   \n",
+       "29598  Intimacies of a Prostitute   \n",
+       "29599             Beautiful Agony   \n",
+       "29600            La venus maldita   \n",
+       "\n",
+       "                                            opening_text   \n",
+       "0      Custodio de señoras (transl. Custodian of ladi...  \\\n",
+       "1      Angel Face (Spanish: La cara del ángel) is a 1...   \n",
+       "2      Vasily Vasilievich Rozanov (Russian: Васи́лий ...   \n",
+       "3      In Freudian psychoanalysis, the phallic stage ...   \n",
+       "4      Neaira (/niˈaɪrə/; Greek: Νέαιρα), also Neaera...   \n",
+       "...                                                  ...   \n",
+       "29596  Juegos de verano (Summer Games) is a 1973 Arge...   \n",
+       "29597  La Mary is a 1974 Argentine romantic-drama fil...   \n",
+       "29598  Intimacies of a Prostitute (Spanish: Intimidad...   \n",
+       "29599  Beautiful Agony is a paid-subscription erotic ...   \n",
+       "29600  La venus maldita (The Damned Venus) is a 1967 ...   \n",
+       "\n",
+       "                                                category   page_id   \n",
+       "0      [Articles with short description, Short descri...  10000174  \\\n",
+       "1      [IMDb ID same as Wikidata, Webarchive template...  10003264   \n",
+       "2      [Articles with short description, Short descri...   1000334   \n",
+       "3      [Articles with short description, Short descri...   1000429   \n",
+       "4      [Articles with short description, Short descri...  10006179   \n",
+       "...                                                  ...       ...   \n",
+       "29596  [CS1 Spanish-language sources (es), Articles w...   9997901   \n",
+       "29597  [CS1 Spanish-language sources (es), Use dmy da...   9998022   \n",
+       "29598  [CS1 Spanish-language sources (es), Articles w...   9998051   \n",
+       "29599  [Australian erotica and pornography websites, ...   9998582   \n",
+       "29600  [CS1 Spanish-language sources (es), CS1 Europe...   9999236   \n",
+       "\n",
+       "                                        blocked_category  \n",
+       "0                             [Erotic comedy film stubs]  \n",
+       "1                                      [Dirty War films]  \n",
+       "2                                 [Deaths by starvation]  \n",
+       "3                                      [Child sexuality]  \n",
+       "4                                             [Hetairai]  \n",
+       "...                                                  ...  \n",
+       "29596       [Argentine erotic films, 1970s erotic films]  \n",
+       "29597                     [Argentine erotic drama films]  \n",
+       "29598  [Sexploitation films, Films about prostitution...  \n",
+       "29599      [Australian erotica and pornography websites]  \n",
+       "29600  [Erotic film stubs, Argentine erotic drama fil...  \n",
+       "\n",
+       "[29601 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d13f5999-4f4a-418f-8197-102f3c868564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bl.to_csv(BLOCKLIST_CSV, index=False)"
    ]
   }
  ],
